; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_cypress_m8.c_cypress_buf_alloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_cypress_m8.c_cypress_buf_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cypress_buf = type { i32, i32*, i32*, i32* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cypress_buf* (i32)* @cypress_buf_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cypress_buf* @cypress_buf_alloc(i32 %0) #0 {
  %2 = alloca %struct.cypress_buf*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.cypress_buf*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store %struct.cypress_buf* null, %struct.cypress_buf** %2, align 8
  br label %41

8:                                                ; preds = %1
  %9 = load i32, i32* @GFP_KERNEL, align 4
  %10 = call i8* @kmalloc(i32 32, i32 %9)
  %11 = bitcast i8* %10 to %struct.cypress_buf*
  store %struct.cypress_buf* %11, %struct.cypress_buf** %4, align 8
  %12 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %13 = icmp eq %struct.cypress_buf* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %8
  store %struct.cypress_buf* null, %struct.cypress_buf** %2, align 8
  br label %41

15:                                               ; preds = %8
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @GFP_KERNEL, align 4
  %18 = call i8* @kmalloc(i32 %16, i32 %17)
  %19 = bitcast i8* %18 to i32*
  %20 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %21 = getelementptr inbounds %struct.cypress_buf, %struct.cypress_buf* %20, i32 0, i32 1
  store i32* %19, i32** %21, align 8
  %22 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %23 = getelementptr inbounds %struct.cypress_buf, %struct.cypress_buf* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %15
  %27 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %28 = call i32 @kfree(%struct.cypress_buf* %27)
  store %struct.cypress_buf* null, %struct.cypress_buf** %2, align 8
  br label %41

29:                                               ; preds = %15
  %30 = load i32, i32* %3, align 4
  %31 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %32 = getelementptr inbounds %struct.cypress_buf, %struct.cypress_buf* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 8
  %33 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %34 = getelementptr inbounds %struct.cypress_buf, %struct.cypress_buf* %33, i32 0, i32 1
  %35 = load i32*, i32** %34, align 8
  %36 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %37 = getelementptr inbounds %struct.cypress_buf, %struct.cypress_buf* %36, i32 0, i32 2
  store i32* %35, i32** %37, align 8
  %38 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  %39 = getelementptr inbounds %struct.cypress_buf, %struct.cypress_buf* %38, i32 0, i32 3
  store i32* %35, i32** %39, align 8
  %40 = load %struct.cypress_buf*, %struct.cypress_buf** %4, align 8
  store %struct.cypress_buf* %40, %struct.cypress_buf** %2, align 8
  br label %41

41:                                               ; preds = %29, %26, %14, %7
  %42 = load %struct.cypress_buf*, %struct.cypress_buf** %2, align 8
  ret %struct.cypress_buf* %42
}

declare dso_local i8* @kmalloc(i32, i32) #1

declare dso_local i32 @kfree(%struct.cypress_buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
